--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-﻿fastapi~=0.95.0
-uvicorn~=0.20.0
-pydantic~=1.9.1
-python-dotenv~=1.0.0
-requests~=0.25.1
-cryptography==39.0.2
+fastapi==0.104.0  # Fix: 0.104.1 → 0.104.0 (stable)
+uvicorn==0.24.0
+pydantic==2.5.0   # Fix: 2.5.2 → 2.5.0 si conflit, mais 2.5.2 OK
+python-dotenv==1.0.0
+requests==2.31.0
